// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown can focus dropdown and select option 1`] = `
.c0 {
  border: 0.1rem solid black;
  height: 10rem;
  width: 10rem;
}

.c1 {
  background: white;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2 {
  background: green;
  margin: 0 0.5rem 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="choosePokemon-valueContainer"
      id="choosePokemon-valueContainer"
      name="choosePokemon"
      tabindex="0"
    >
      <div
        class="c2"
      >
        Charmander
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown can use arrow keys and enter to navigate options 1`] = `
.c0 {
  border: 0.1rem solid black;
  height: 10rem;
  width: 10rem;
}

.c1 {
  background: white;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2 {
  background: green;
  margin: 0 0.5rem 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="choosePokemon-valueContainer"
      id="choosePokemon-valueContainer"
      name="choosePokemon"
      tabindex="0"
    >
      <div
        class="c2"
      >
        Charmander
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown closes options when clicking outside 1`] = `
<DocumentFragment>
  .c0 {
  border: 0.1rem solid black;
  height: 10rem;
  width: 10rem;
}

.c1 {
  background: white;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2 {
  background: white;
  position: absolute;
  max-height: 10rem;
  width: 10rem;
}

.c3:focus,
.c3:hover {
  cursor: pointer;
  background: skyblue;
}

<div
    class="c0"
  >
    <div
      class="c1"
      data-testid="choosePokemon-valueContainer"
      id="choosePokemon-valueContainer"
      name="choosePokemon"
      tabindex="0"
    />
    <div
      class="c2"
    >
      <div
        class="c3"
        id="choosePokemon-option-Bulbasaur"
        tabindex="0"
      >
        Bulbasaur 
      </div>
      <div
        class="c3"
        id="choosePokemon-option-Charmander"
        tabindex="0"
      >
        Charmander 
      </div>
      <div
        class="c3"
        id="choosePokemon-option-Squirtle"
        tabindex="0"
      >
        Squirtle 
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown closes options when clicking outside 2`] = `
<DocumentFragment>
  .c0 {
  border: 0.1rem solid black;
  height: 10rem;
  width: 10rem;
}

.c1 {
  background: white;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

<div
    class="c0"
  >
    <div
      class="c1"
      data-testid="choosePokemon-valueContainer"
      id="choosePokemon-valueContainer"
      name="choosePokemon"
      tabindex="0"
    />
  </div>
</DocumentFragment>
`;

exports[`Dropdown deselects option when clicking on them twice when dropdown is multi 1`] = `
.c0 {
  border: 0.1rem solid black;
  height: 10rem;
  width: 10rem;
}

.c1 {
  background: white;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="choosePokemon-valueContainer"
      id="choosePokemon-valueContainer"
      name="choosePokemon"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Dropdown displays all options when focused 1`] = `
.c0 {
  border: 0.1rem solid black;
  height: 10rem;
  width: 10rem;
}

.c1 {
  background: white;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2 {
  background: white;
  position: absolute;
  max-height: 10rem;
  width: 10rem;
}

.c3:focus,
.c3:hover {
  cursor: pointer;
  background: skyblue;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="choosePokemon-valueContainer"
      id="choosePokemon-valueContainer"
      name="choosePokemon"
      tabindex="0"
    />
    <div
      class="c2"
    >
      <div
        class="c3"
        id="choosePokemon-option-Bulbasaur"
        tabindex="0"
      >
        Bulbasaur
         
        
      </div>
      <div
        class="c3"
        id="choosePokemon-option-Charmander"
        tabindex="0"
      >
        Charmander
         
        
      </div>
      <div
        class="c3"
        id="choosePokemon-option-Squirtle"
        tabindex="0"
      >
        Squirtle
         
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown does not display options on initial render 1`] = `
.c0 {
  border: 0.1rem solid black;
  height: 10rem;
  width: 10rem;
}

.c1 {
  background: white;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="choosePokemon-valueContainer"
      id="choosePokemon-valueContainer"
      name="choosePokemon"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Dropdown selects multiple options when dropdown is multi 1`] = `
.c0 {
  border: 0.1rem solid black;
  height: 10rem;
  width: 10rem;
}

.c1 {
  background: white;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2 {
  background: green;
  margin: 0 0.5rem 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="choosePokemon-valueContainer"
      id="choosePokemon-valueContainer"
      name="choosePokemon"
      tabindex="0"
    >
      <div
        class="c2"
      >
        Charmander
      </div>
      <div
        class="c2"
      >
        Squirtle
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown selects options from values prop 1`] = `
.c0 {
  border: 0.1rem solid black;
  height: 10rem;
  width: 10rem;
}

.c1 {
  background: white;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2 {
  background: green;
  margin: 0 0.5rem 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="choosePokemon-valueContainer"
      id="choosePokemon-valueContainer"
      name="choosePokemon"
      tabindex="0"
    >
      <div
        class="c2"
      >
        Bulbasaur
      </div>
      <div
        class="c2"
      >
        Charmander
      </div>
    </div>
  </div>
</div>
`;
